// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.collector";
option java_outer_classname = "CollectorProto";
option objc_class_prefix = "HLW";

package collectors;

// The collector application definition.
service Collector {
    // requests data
    rpc FetchData (DataRequest) returns (DataResponse) {
    }
}

// The request message containing a request id
message DataRequest {
    int32 requestID = 1;
}

// The response message containing the data
message DataResponse {
    repeated DataPoint data = 1;
}

// A single data point - a single trade on an exchange
message DataPoint {
    double price = 1;
    double amount = 2;
    int64 timestamp = 3;
    enum Type {
        BUY = 0;
        SELL = 1;
    }
    Type type = 4;
    string market = 5;
}
